--- a/RemoteBank/.classpath
+++ b/RemoteBank/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-client-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-common-3.1.3.jar"/>
@@ -18,5 +19,8 @@
 	<classpathentry kind="lib" path="lib/jersey-json-1.17.jar"/>
 	<classpathentry kind="lib" path="lib/jersey-server-1.17.jar"/>
 	<classpathentry kind="lib" path="lib/jersey-servlet-1.17.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-all-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
